\name{NEWS}
\title{News for Package \pkg{eRm}}
\encoding{UTF-8}
\section{Changes in Version 1.0-2}{
  \itemize{
      \item \code{NPtest()} can now be applied to matrices up to 256 columns (Fortran code changed). 
	  \item More flexibility for the legend in \code{plotINFO()} added.
	  \item Full and 0 response patterns are not taken into account in \code{SepRel()}. 
	}
}

\section{Changes in Version 1.0-1}{
  \itemize{
	  \item Legend in plotjointICC now uses proper item labels (and better default colors).
	  \item Corrected item-test correlations added to itemfit.
	  \item Sort option in print method for itemfit added.
	}
}

\section{Changes in Version 1.0-0}{
  \itemize{
	  \item Additional tests in \code{NPtest()} added.
	  \item Toy datasets stored as data frames.
	}
}

\section{Changes in Version 0.16-0}{
  \itemize{
	  \item \code{PersonMisfit()} incl. S3 added.
	}
}
\section{Changes in Version 0.15-8}{
  \itemize{
	 \item sanity check for missings in split vector in \code{LRtest.Rm()} added.
	 \item smoother confidence bands added in \code{plotGOF()}.
	}
}
\section{Changes in Version 0.15-7}{
  \itemize{
	  \item \code{LRtest.Rm()}: bugfix due to updates in base R.
	}
}
\section{Changes in Version 0.15-6}{
  \itemize{
	  \item \code{plotGOF()}: added arguments \code{x_axis}, \code{y_axis}, \code{set_par}, and \code{reset_par} to ease customization of the plot.
		\item Imports functions from default packages packages, as required by the new CRAN-check.
	}
}
\section{Changes in Version 0.15-5}{
  \itemize{
    \item implemented an \code{anova()} method for all models (except \acronym{LLRA}s, which have their own: \code{anova.llra}). see \code{?anova.eRm}
    \item added a function to compute separation reliability, as proposed in Wright & Stone (1999; see \code{?SepRel}).
    \item \code{plotINFO()} accepts more arguments via \code{\dots} (see \code{?plotINFO}).
    \item fixed a bug in \code{plotPWmap()}.