@@ -1,4 +1,0 @@
-xx <- c(NA, 3, 3, NA)
-any(is.na(xx))
-require("eRm")
-?smooth.spline
